# checkpoint

./: .drone.yml  .env  .env.example  .gitignore  Cargo.toml  README.md
migrations/2023-06-23-083833_init/: up.sql
migrations/2023-07-03-091547_refresh/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: error.rs  mod.rs  token.rs  user.rs
src/routes/: mod.rs  signup.rs  token.rs
